# aionrs-patched

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  release-please-config.json  rust-toolchain.toml  vx.toml
.cargo/: config.toml
.config/: nextest.toml
.github/patches/: aion-agent-compact-prompt.patch  aion-compact-crlf.patch  aioncore-snapshot-temp-bound.patch
.github/workflows/: build-windows-x64.yml  ci.yml  e2e.yml  release-please.yml  release.yml
crates/aion-agent/: Cargo.toml
crates/aion-agent/src/: agents_md.rs  bootstrap.rs  cache_diagnostics.rs  context.rs  engine.rs  lib.rs  orchestration.rs  session.rs  skill_tool.rs  spawn_tool.rs  spawner.rs  vcr.rs
crates/aion-agent/src/commands/: clear.rs  compact.rs  help.rs  mod.rs
crates/aion-agent/src/compact/: auto.rs  emergency.rs  estimate.rs  micro.rs  prompt.rs  state.rs
crates/aion-agent/src/output/: mod.rs  protocol_sink.rs
crates/aion-agent/src/plan/: tools.rs
crates/aion-agent/tests/: autocompact_test.rs  bootstrap_test.rs  compact_types_test.rs  cwd_injection_test.rs  emergency_test.rs  engine_compact_test.rs  engine_test.rs  json_stream_approval_test.rs  memory_context_integration.rs  microcompact_test.rs  orchestration_test.rs  output_compaction_test.rs  plan_e2e_test.rs  plan_engine_test.rs  plan_prompt_file_test.rs  plan_tools_test.rs  skills_e2e.rs  spawn_description_test.rs  spawn_test.rs  tool_guidance_prompt_test.rs
crates/aion-agent/tests/acceptance/: compact_test.rs  cross_feature_test.rs  file_cache_test.rs  helpers.rs  memory_test.rs  mod.rs  plan_mode_test.rs  tool_desc_test.rs
crates/aion-agent/tests/common/: mod.rs
crates/aion-agent/tests/e2e/: anthropic.rs  compaction.rs  mod.rs  openai.rs
crates/aion-cli/: Cargo.toml
crates/aion-cli/src/: main.rs
crates/aion-compact/: Cargo.toml
crates/aion-compact/src/: sanitize.rs
crates/aion-config/: Cargo.toml
crates/aion-config/src/: auth.rs  compact.rs  config.rs  lib.rs  logging.rs  plan.rs  shell.rs
crates/aion-config/tests/: compact_config_test.rs  logging_integration.rs  plan_config_test.rs
crates/aion-mcp/: Cargo.toml
crates/aion-mcp/src/: config.rs  manager.rs  protocol.rs  tool_proxy.rs
crates/aion-mcp/src/transport/: mod.rs  sse.rs  stdio.rs  streamable_http.rs
crates/aion-memory/: Cargo.toml
crates/aion-memory/src/: lib.rs  paths.rs  prompt.rs  store.rs  types.rs
crates/aion-memory/tests/: e2e_integration.rs  index_integration.rs  paths_integration.rs  prompt_integration.rs  store_integration.rs
crates/aion-protocol/: Cargo.toml
crates/aion-protocol/src/: events.rs  lib.rs  reader.rs
crates/aion-protocol/tests/: approval_manager_test.rs  capability_discovery_test.rs  commands_test.rs  set_config.rs
crates/aion-providers/: Cargo.toml
crates/aion-providers/src/: anthropic.rs  anthropic_shared.rs  bedrock.rs  lib.rs  openai.rs  retry.rs  vertex.rs
crates/aion-providers/tests/: provider_anthropic_test.rs  provider_openai_test.rs
crates/aion-skills/: Cargo.toml
crates/aion-skills/src/: conditional.rs  context_modifier.rs  discovery.rs  discovery_supplemental_tests.rs  executor.rs  frontmatter.rs  hooks.rs  integration_tests.rs  loader.rs  loader_supplemental_tests.rs  loader_tests.rs  mcp.rs  paths.rs  shell.rs  substitution.rs  types.rs  watcher.rs  watcher_tests.rs
crates/aion-skills/src/bundled/: bundled_tests.rs  mod.rs
crates/aion-tools/: Cargo.toml
crates/aion-tools/src/: bash.rs  edit.rs  file_cache.rs  glob.rs  grep.rs  lib.rs  read.rs  registry.rs  tool_search.rs  write.rs
crates/aion-tools/tests/: edit_write_cache_test.rs  file_cache_test.rs  read_dedup_test.rs  tool_description_test.rs
crates/aion-types/: Cargo.toml
crates/aion-types/src/: lib.rs  llm.rs  message.rs  spawner.rs  tool.rs
crates/aion-types/tests/: plan_mode_transition_test.rs
docs/: README.md  advanced.md  getting-started.md  json-stream-protocol.md  mcp.md  providers.md  skills.md  tools.md  troubleshooting.md
tests/: engine_test.rs  json_stream_approval_test.rs  orchestration_test.rs  provider_anthropic_test.rs  provider_openai_test.rs  skills_e2e.rs  spawn_test.rs
tests/common/: mod.rs
workspace-hack/: Cargo.toml
workspace-hack/src/: lib.rs
