[workspace]
resolver = "2"
members = [
    "crates/aion-types",
    "crates/aion-protocol",
    "crates/aion-compact",
    "crates/aion-config",
    "crates/aion-providers",
    "crates/aion-tools",
    "crates/aion-mcp",
    "crates/aion-skills",
    "crates/aion-memory",
    "crates/aion-agent",
    "crates/aion-cli",
    "workspace-hack",
]

[workspace.package]
version = "0.1.28"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/iOfficeAI/aionrs"

[workspace.dependencies]
# Internal crates
aion-types     = { path = "crates/aion-types" }
aion-protocol  = { path = "crates/aion-protocol" }
aion-compact   = { path = "crates/aion-compact" }
aion-config    = { path = "crates/aion-config" }
aion-providers = { path = "crates/aion-providers" }
aion-tools     = { path = "crates/aion-tools" }
aion-mcp       = { path = "crates/aion-mcp" }
aion-skills    = { path = "crates/aion-skills" }
aion-memory    = { path = "crates/aion-memory" }
aion-agent     = { path = "crates/aion-agent" }

# Async runtime
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
# HTTP client — use rustls to avoid native OpenSSL dep during cross-compilation
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow    = "1"

# File globbing
glob = "0.3"

# LRU cache (for file state tracking)
lru = "0.18"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# TOML config parsing
toml = "1.0"

# YAML frontmatter parsing (for skill files)
serde_yaml = "0.9"

# XDG/platform config directory
dirs = "6"

# Regular expressions (for argument substitution in skills)
regex = "1"

# File system change notification (for skill hot-reload)
notify = "8"

# Terminal color support
crossterm = "0.29"

# TTY detection
is-terminal = "0.4"

# AWS SigV4 signing (for Bedrock provider)
aws-sigv4            = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-config           = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts          = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client", "sigv4a"] }

# Pin rustls-webpki to fix RUSTSEC-2026-{0098,0099,0104}
rustls-webpki = "0.103.13"

# JWT creation (for Vertex GCP service account auth)
jsonwebtoken = "10"

# Base64 encoding
base64 = "0.22"

# URL parsing
url = "2"

# Structured logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

unicode-width = "0.2.2"

# Unix file flags (O_NOFOLLOW) for secure bundled skill file extraction
libc = "0.2"

# workspace-hack (managed by cargo-hakari for build speed)
workspace-hack = { path = "workspace-hack" }

# Test utilities
wiremock    = "0.6"
tokio-test  = "0.4"
tempfile    = "3"
mockall     = "0.14"
rstest      = "0.26"
serial_test = "3"
