[package]
name = "aion-cli"
description = "CLI binary for aionrs — a multi-provider AI agent with tool orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai", "agent", "cli", "llm", "anthropic"]
categories = ["command-line-utilities"]

[[bin]]
name = "aionrs"
path = "src/main.rs"

[dependencies]
aion-agent.workspace    = true
aion-compact.workspace  = true
aion-config.workspace   = true
aion-memory.workspace   = true
aion-providers.workspace = true
aion-tools.workspace    = true
aion-mcp.workspace      = true
aion-protocol.workspace = true
aion-skills.workspace   = true

tokio.workspace              = true
anyhow.workspace             = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true

workspace-hack.workspace = true
