[package]
name = "aion-skills"
description = "Skills system for aionrs: named prompt snippets with tool orchestration, permissions, hooks, and MCP integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aion-types.workspace   = true
aion-config.workspace  = true
aion-mcp.workspace     = true

tracing.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
serde_yaml.workspace   = true
tokio.workspace        = true
futures.workspace      = true
async-trait.workspace  = true
anyhow.workspace       = true
thiserror.workspace    = true
glob.workspace         = true
dirs.workspace         = true
regex.workspace        = true
notify.workspace       = true
unicode-width.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

workspace-hack.workspace = true

[dev-dependencies]
aion-mcp = { workspace = true, features = ["test-utils"] }
tempfile.workspace   = true
rstest.workspace     = true
serial_test.workspace = true
